added initial html and css structure

--- a/index.html
+++ b/index.html
@@ -36,21 +36,61 @@
   </head>
   <body>
     <header>
-      <div class=""></div>
+      <div class="header-line"></div>
+      <img src="./assets/tambourine.png" class="tambourine" />
+      <div class="text-name">
+        <span class="text-green text-bold text-lg">kramarMaria</span>
+          <span class="text-purp text text-xs">developer</span>
+          <span class="text-purp text-bold text-lg">javaScript</span>
+      </div>
+      <img src="./assets/cat.png" class="cat" />
     </header>
 
     <main>
-      <section>
-        <div class=""></div>
-      </section>
+      <div class="projects-line">
+        <marquee class="text-abs-black">
+          Welcome to my portfolio site! Enjoy my excellent projects.
+        </marquee>
+      </div>
 
-      <section>
-        <div class=""></div>
-      </section>
+      <div class="projects-content">
+        <a href="https://frogs-game.herokuapp.com/" target="_blank" rel="noreferrer noopenner">
+          <div class="project-item-block">
+            <span class="text-purp text text-xs">(text game)</span>
+            <span class="text-green text-bold text-lg">frogs</span>
+            <div class="project-item-image-block">
+              <img width="145" height="110" src="./assets/frog.png" class="project-item-image" />
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="projects-line">
+        <marquee class="text-abs-black">
+          Welcome to my portfolio site! Enjoy my excellent projects.
+        </marquee>
+      </div>
     </main>
 
     <footer>
-      <div class=""></div>
+      <div>
+        <img width="34" height="23" src="./assets/mail.png" />
+        <span class="text-white text-m">kramar.makra@gmail.com</span>
+      </div>
+
+      <div>
+        <img width="32" height="32" src="./assets/skype.png" />
+        <span class="text-white text-m">kramarmm</span>
+      </div>
+
+      <div>
+        <a href="https://github.com/kramarmm" target="_blank" rel="noreferrer noopenner">
+          <img width="31" height="30" src="./assets/github.png" />
+        </a>
+        <a href="https://www.linkedin.com/in/maria-kramar-b2bb05152/" target="_blank" rel="noreferrer noopenner">
+          <img width="37" height="36" src="./assets/linkedin.png" />
+        </a>
+      </div>
     </footer>
   </body>
 </html>
